--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "dependencies": {
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
-    "@octokit/core": "^3.4.0",
-    "aws-sdk": "^2.887.0"
+    "@octokit/core": "^3.4.0"
   }
 }
